<resources>
    <string name="app_name">X-PackRat</string>
    <string name="belonging_image_content_description">The image for this belonging</string>
    <string name="log_usage_button_text">log usage</string>
    <string name="content_authority">com.example.android.x_packrat</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_charts">Charts</string>
    <string name="action_search">Search</string>
    <string name="pref_reminder_frequency_label">Reminder Frequency</string>
    <string name="pref_reminder_frequency_label_weekly">Weekly</string>
    <string name="pref_reminder_frequency_label_biweekly">Once every two weeks</string>
    <string name="pref_reminder_frequency_label_monthly">Monthly</string>
    <string name="pref_reminder_frequency_label_bimonthly">Once every two months</string>
    <string name="pref_reminder_frequency_key" translatable="false">frequency</string>
    <string name="pref_reminder_frequency_value_weekly" translatable="false">weekly</string>
    <string name="pref_reminder_frequency_value_biweekly" translatable="false">biweekly</string>
    <string name="pref_reminder_frequency_value_monthly" translatable="false">monthly</string>
    <string name="pref_reminder_frequency_value_bimonthly" translatable="false">bimonthly</string>
    <string name="action_add_belonging">Add belonging</string>
    <string name="action_add_usage_log">Add usage log</string>
    <string name="action_delete_belonging">Delete belonging</string>
    <string name="add_image_label">Image</string>
    <string name="belonging_name_label">Name</string>
    <string name="change_date_label">Most Recent Use Date</string>
    <string name="change_use_date_label">Use Date</string>
    <string name="change_time_label">Most Recent Use Time</string>
    <string name="change_use_time_label">Use Time</string>
    <string name="hint_belonging_name">Name</string>
    <string name="hint_usage_log_description">Description</string>
    <string name="use_description_text">Use Description</string>
    <string name="sold_to_label">Sold To</string>
    <string name="donated_to_label">Donated To</string>
    <string name="editor_image_content_description">This is the image for this belonging.</string>
    <string name="change_image_button">choose image</string>
    <string name="editor_activity_title_update_belonging">Update Belonging</string>
    <string name="editor_activity_title_update_usage_log">Update Usage Log</string>
    <string name="belongings_tab_title">Belongings</string>
    <string name="sold_tab_title">Sold</string>
    <string name="discarded_tab_title">Discarded</string>
    <string name="donated_tab_title">Donated</string>
    <string name="editor_activity_title_add_belonging">Add Belonging</string>
    <string name="editor_activity_title_add_usage_log">Add Usage Log</string>
    <string name="usage_log_activity_title_text">Usage Logs</string>
    <string name="editor_delete_belonging_failed">Failed to delete belonging</string>
    <string name="editor_delete_belonging_succeeded">Belonging deleted successfully</string>
    <string name="delete_dialog_msg">Delete this belonging?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">DISCARD</string>
    <string name="keep_editing">KEEP EDITING</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="please_enter_date">Please enter a date</string>
    <string name="please_enter_time">Please enter a time</string>
    <string name="belonging_add_succ">Belonging added successfully</string>
    <string name="belonging_add_fail">Failed to add belonging</string>
    <string name="belonging_update_fail">Failed to update belonging</string>
    <string name="belonging_update_succ">Belonging updated successfully</string>
    <string name="content_descrip_edit_ic">Edit belonging</string>
    <string name="change_date_button">choose date</string>
    <string name="change_time_button">choose time</string>
    <string name="no_data_available">Add a belonging using the + to get started</string>
    <string name="no_data_available_sold">Add a belonging you\'ve sold using the +</string>
    <string name="no_data_available_discarded">Add a belonging you\'ve discarded using the +</string>
    <string name="no_data_available_donated">Add a belonging you\'ve donated using the +</string>
    <string name="no_logs_available">Add dates you\'ve used your belonging with the +</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="usage_reminder_notification_title">You have a belonging that you have not used in
        awhile.</string>
    <string name="usage_reminder_notification_body">Maybe you should consider selling, discarding,
        or giving away some of your things.</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="notification_action_check_belongings">Check it out</string>
    <string name="pie_chart_description">Number of Uses by Belonging</string>
    <string name="pie_center_text_most">Most Used</string>
    <string name="pie_center_text_least">Least Used</string>
    <string name="pie_chart_title_text_most">Most Recent</string>
    <string name="pie_chart_title_text_least">Least Recent</string>
    <string name="action_most_recent">Most Recent</string>
    <string name="action_least_recent">Least Recent</string>
    <string name="action_category_comparison">Category Comparison</string>
    <string name="bar_chart_title">Number of Items in Each Category</string>
    <string name="pie_chart_title_most">Most Recently Used Belongings \n (Number of Times Used)</string>
    <string name="pie_chart_title_least">Least Recently Used Belongings \n (Number of Times Used)</string>
    <string name="last_used_text">Used: </string>
    <string name="sold_to_text">Sold to: </string>
    <string name="donated_to_text">Donated to: </string>
    <string name="action_save_usage_log">Save</string>
    <string name="action_delete_usage_log">Delete</string>
    <string name="bar_chart_label">Number of Items in Each Category</string>
    <string name="pie_chart_toast_text_used">Used</string>
    <string name="pie_chart_toast_text_times">time(s)</string>
    <string name="usage_log_toast_text_succ">Log updated successfully</string>
    <string name="usage_log_toast_text_fail">Failed to update log</string>
    <string name="usage_log_toast_text_add_succ">Log added successfully</string>
    <string name="usage_log_toast_text_add_fail">Failed to add log</string>
    <string name="usage_log_toast_text_del_succ">Log deleted successfully</string>
    <string name="usage_log_toast_text_del_fail">Failed to delete log</string>
    <string name="usage_log_delete_dialog_msg">Delete this log</string>
</resources>