<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_most_recent"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_white_36dp"
        android:title="@string/action_most_recent"/>

    <item
        android:id="@+id/action_least_recent"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_least_recent"/>

    <item
        android:id="@+id/action_category_comparison"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_category_comparison"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_black_36dp"
        android:title="@string/action_settings"/>
</menu>