<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_black_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_belonging"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_black_36dp"
        android:title="@string/action_add_belonging"/>

    <item
        android:id="@+id/action_charts"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pie_chart_black_36dp"
        android:title="@string/action_charts"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_black_36dp"
        android:title="@string/action_settings"/>
</menu>