<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.x_packrat.EditorActivity">

    <!-- Name for belonging -->
    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/belonging_name_label"
            style="@style/CategoryStyle"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <com.example.android.x_packrat.TouchableEditText
                android:id="@+id/edit_belonging_name"
                android:hint="@string/hint_belonging_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Image for belonging -->
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/container_name">

        <!-- Label -->
        <TextView
            android:text="@string/add_image_label"
            style="@style/CategoryStyle"/>

        <ImageView
            android:id="@+id/editor_belonging_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/editor_image_content_description"
            android:src="@drawable/ic_image_black_36dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_belonging_name" />

        <Button
            android:id="@+id/change_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_image_button" />

    </LinearLayout>

    <!-- Most Recent use date for belonging -->
    <LinearLayout
        android:id="@+id/container_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/container_image">

        <!-- Label -->
        <TextView
            android:text="@string/change_date_label"
            style="@style/CategoryStyle"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/editor_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/change_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_date_button" />
        </LinearLayout>

    </LinearLayout>

    <!-- Most Recent use time for belonging -->
    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/container_date">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/change_time_label" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical|left">

            <TextView
                android:id="@+id/editor_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/change_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_time_button" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
